fix unreadable svg text in dark mode

--- a/client/src/components/Skills/Skills.module.scss
+++ b/client/src/components/Skills/Skills.module.scss
@@ -18,6 +18,7 @@
             img {
                 width: 99%;
                 height: 96px;
+                background-color: white;
             }
 
             p {
